Fix image and video overflow on mobile display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,25 @@ section {
   padding-top: 1.563rem;
 }
 
+img {
+  max-width: 100%;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 560px;
+  max-height: 315px;
+}
+
 .hero-titles {
   padding-bottom: 5%;
 }
